UtahLiveDataTest/src/objects/PanelApplication__c.object
<CustomObject>
    <description>[Business] Defines a review Panel for an Application /Pre-Application</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Panel Applications</relationshipLabel>
        <relationshipName>Panel_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalOrgName__c</fullName>
        <formula>Application__r.ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExternalOrgName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NoOfReviewersAssigned__c</fullName>
        <label>No Of Reviewers Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviews__c</fullName>
        <description>This and TotalScore__c are copied from RSA to PanelApplication In AddApplicationsToPanelHelper.</description>
        <label>Number of Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PanelApplicationName__c</fullName>
        <formula>Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PanelApplicationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>Panel Applications</relationshipLabel>
        <relationshipName>Panel_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewPanel__c</fullName>
        <label>Review Panel</label>
        <referenceTo>ReviewPanel__c</referenceTo>
        <relationshipLabel>Panel Applications</relationshipLabel>
        <relationshipName>Panel_Applications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReviewStepCompleted__c</fullName>
        <description>Only the System Admin can do action on it once completed (used for HideDecisionField on button)</description>
        <formula>NOT($Profile.Name = &quot;System Administrator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewStepCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added to Step</fullName>
                    <default>true</default>
                    <label>Added to Step</label>
                </value>
                <value>
                    <fullName>Reviewers Assigned</fullName>
                </value>
                <value>
                    <fullName>Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Reviews Complete</fullName>
                </value>
                <value>
                    <fullName>Promoted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalScore__c</fullName>
        <description>This field is copied from RSA to Panel Application in AddApplicationsToPanelHelper.</description>
        <label>TotalScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Panel Application</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Panel Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Panel Applications</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Application</fullName>
        <active>true</active>
        <label>Pre-Application</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>